Add delete to group management