@@ -32,12 +32,14 @@ public class GroupFormView extends GridPane {
 
     private final TextField uuidField;
     private final ComboBox<Player> dmComboBox;
-    private final Map<House, CheckBox> houseCheckBoxes; // To hold our dynamic checkboxes
+    private final Map<House, CheckBox> houseCheckBoxes;
 
     private final Button actionButton;
     private final Button cancelButton;
-    private final Button showPlayersButton; // The new button!
+    private final Button deleteButton; // Our beautiful new button!
+    private final Button showPlayersButton;
     private Group groupBeingEdited;
+    private Consumer<Player> onDmSelectionHandler;
 
     public GroupFormView(Map<UUID, Player> attendingPlayers) {
         super();
@@ -45,10 +47,12 @@ public class GroupFormView extends GridPane {
         setVgap(10);
         setPadding(new Insets(20));
 
+        // --- Column Setup ---
         ColumnConstraints col1 = new ColumnConstraints();
         col1.setHgrow(Priority.ALWAYS);
         this.getColumnConstraints().addAll(col1);
 
+        // --- UUID Field ---
         uuidField = new TextField();
         uuidField.setEditable(false);
         uuidField.setStyle("-fx-control-inner-background: #f0f0f0; -fx-text-fill: #555;");
@@ -64,9 +68,9 @@ public class GroupFormView extends GridPane {
         HBox uuidBox = new HBox(5, uuidField, copyButton);
         HBox.setHgrow(uuidField, Priority.ALWAYS);
 
+        // --- DM ComboBox ---
         dmComboBox = new ComboBox<>();
         dmComboBox.setMaxWidth(Double.MAX_VALUE);
-
         dmComboBox.setCellFactory(lv -> new ListCell<>() {
             @Override
             protected void updateItem(Player item, boolean empty) {
@@ -81,48 +85,42 @@ public class GroupFormView extends GridPane {
                 setText(empty ? null : item.getName());
             }
         });
-
+        dmComboBox.valueProperty().addListener((obs, oldVal, newVal) -> {
+            if (onDmSelectionHandler != null) {
+                onDmSelectionHandler.accept(newVal);
+            }
+        });
         updateDmList(attendingPlayers);
 
+        // --- House CheckBoxes ---
         this.houseCheckBoxes = new EnumMap<>(House.class);
-        // --- The new, beautiful two-column layout! ---
         GridPane houseGrid = new GridPane();
         houseGrid.setHgap(10);
         houseGrid.setVgap(5);
-
-        ColumnConstraints gridCol1 = new ColumnConstraints();
-        gridCol1.setPercentWidth(50);
-        ColumnConstraints gridCol2 = new ColumnConstraints();
-        gridCol2.setPercentWidth(50);
-        houseGrid.getColumnConstraints().addAll(gridCol1, gridCol2);
-
         List<House> sortedHouses = Arrays.stream(House.values())
                 .sorted(Comparator.comparing(this::formatHouseName))
-                .collect(Collectors.toList());
-
-        int midpoint = (sortedHouses.size() + 1) / 2;
+                .toList();
 
         for (int i = 0; i < sortedHouses.size(); i++) {
             House house = sortedHouses.get(i);
             CheckBox cb = new CheckBox(formatHouseName(house));
             houseCheckBoxes.put(house, cb);
-
-            if (i < midpoint) {
-                houseGrid.add(cb, 0, i);
-            } else {
-                houseGrid.add(cb, 1, i - midpoint);
-            }
+            houseGrid.add(cb, i % 2, i / 2);
         }
-        // ---------------------------------------------
 
+        // --- Buttons ---
         showPlayersButton = new Button("Show Players");
         showPlayersButton.setMaxWidth(Double.MAX_VALUE);
         showPlayersButton.setStyle("-fx-background-color: #6A5ACD; -fx-text-fill: white;");
 
+        deleteButton = new Button("Delete");
+        deleteButton.setStyle("-fx-background-color: #DC143C; -fx-text-fill: white;");
+        deleteButton.setVisible(false);
+        deleteButton.setMaxWidth(Double.MAX_VALUE);
+
         actionButton = new Button("Create");
         cancelButton = new Button("Cancel");
         actionButton.setStyle("-fx-background-color: #3CB371; -fx-text-fill: white;");
-
 
         HBox mainActionsBox = new HBox(10, cancelButton, actionButton);
         mainActionsBox.setAlignment(Pos.CENTER_RIGHT);
@@ -130,15 +128,17 @@ public class GroupFormView extends GridPane {
         VBox spacer = new VBox();
         GridPane.setVgrow(spacer, Priority.ALWAYS);
 
+        // --- Final Layout ---
         add(new Label("UUID"), 0, 0);
         add(uuidBox, 0, 1);
         add(new Label("Dungeon Master:"), 0, 2);
         add(dmComboBox, 0, 3);
         add(new Label("House Themes:"), 0, 4);
-        add(houseGrid, 0, 5); // Add the new grid
+        add(houseGrid, 0, 5);
         add(showPlayersButton, 0, 6);
-        add(spacer, 0, 7);
-        add(mainActionsBox, 0, 8);
+        add(deleteButton, 0, 7);
+        add(spacer, 0, 8);
+        add(mainActionsBox, 0, 9);
 
         Platform.runLater(dmComboBox::requestFocus);
     }
@@ -155,13 +155,6 @@ public class GroupFormView extends GridPane {
         }
     }
 
-    public void setOnDmSelection(Consumer<Player> onDmSelected) {
-        dmComboBox.valueProperty().addListener((obs, oldDm, newDm) -> {
-            onDmSelected.accept(newDm);
-        });
-    }
-
-    // --- Public Getters ---
     public Player getSelectedDm() {
         return dmComboBox.getValue();
     }
@@ -181,6 +174,10 @@ public class GroupFormView extends GridPane {
         return cancelButton;
     }
 
+    public Button getDeleteButton() {
+        return deleteButton;
+    }
+
     public Button getShowPlayersButton() {
         return showPlayersButton;
     }
@@ -189,28 +186,28 @@ public class GroupFormView extends GridPane {
         return groupBeingEdited;
     }
 
+    public void setOnDmSelection(Consumer<Player> handler) {
+        this.onDmSelectionHandler = handler;
+    }
+
     public void populateForm(Group group) {
         this.groupBeingEdited = group;
         uuidField.setText(group.getUuid().toString());
         dmComboBox.setValue(group.getDungeonMaster());
-
-        houseCheckBoxes.forEach((house, checkBox) -> {
-            checkBox.setSelected(group.getHouses().contains(house));
-        });
-
+        houseCheckBoxes.forEach((house, checkBox) -> checkBox.setSelected(group.getHouses().contains(house)));
         actionButton.setText("Update");
         actionButton.setStyle("-fx-background-color: #FFA500; -fx-text-fill: white;");
+        deleteButton.setVisible(true);
     }
 
     public void clearForm() {
         this.groupBeingEdited = null;
         uuidField.clear();
         dmComboBox.getSelectionModel().clearSelection();
-
         houseCheckBoxes.values().forEach(cb -> cb.setSelected(false));
-
         actionButton.setText("Create");
         actionButton.setStyle("-fx-background-color: #3CB371; -fx-text-fill: white;");
+        deleteButton.setVisible(false);
         Platform.runLater(dmComboBox::requestFocus);
     }
 
